css markup of pg1 done

--- a/index.html
+++ b/index.html
@@ -4,99 +4,104 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Web Studio</title>
 </head>
 <body>
     <header>
-        <h1><span>Web</span>Studio</h1>
+        <h1 class="logo"><span class="title">Web</span>Studio</h1>
         <nav>
-            <ul>
-                <li>Студия</li>
-                <li>Портфолио</li>
-                <li>Контакты</li>
+            <ul class="site-nav list">
+                <li><a href="" class="link">Студия</a></li>
+                <li><a href="" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contact list">
+            <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+    <!-- Hero -->
     <main>
-        <section>
-            <h2>Эффективные решения для вашего бизнеса</h2>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h2 class="hero-title">Эффективные решения </br> для вашего бизнеса</h2>
+            <button type="button" class="button">Заказать услугу</button>
         </section>
-        
-        <section>
-            <ul>
+    <!-- Specialty -->
+        <section class="spec">
+            <ul class="spec-list list">
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="spec-list-title">Внимание к деталям</h3>
+                    <p class="spec-list-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="spec-list-title">Пунктуальность</h3>
+                    <p class="spec-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="spec-list-title">Планирование</h3>
+                    <p class="spec-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="spec-list-title">Современные технологии</h3>
+                    <p class="spec-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-        
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
+        <!-- work -->
+        <section class="work">
+            <h2 class="work-title">Чем мы занимаемся</h2>
+            <ul class="work-list list">
                 <li><img src="./imgs/code.jpg" alt="Writing Code" width="370" height="294"></li>
                 <li><img src="./imgs/phone.jpg" alt="Taking Photo" width="370" height="294"></li>
                 <li><img src="./imgs/tablet.jpg" alt="Tablet Design" width="370" height="294"></li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <!-- team -->
+        <section class="team">
+            <h2 class="team-title">Наша команда</h2>
+            <ul class="team-list list">
                 <li>
-                    <a href="">
+                    <a href="" class="team-link">
                         <img src="./imgs/igor.jpg" alt="Игорь Демьяненко" width="270" height="260">
-                        <h3>Игорь Демьяненко</h3>
-                        <p>Product Designer</p>
+                        <h3 class="team-name">Игорь Демьяненко</h3>
+                        <p class="team-text">Product Designer</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="team-link">
                         <img src="./imgs/olga.jpg" alt="Ольга Репина" width="270" height="260">
-                        <h3>Ольга Репина</h3>
-                        <p>Frontend Developer</p>
+                        <h3 class="team-name">Ольга Репина</h3>
+                        <p class="team-text">Frontend Developer</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="team-link">
                         <img src="./imgs/nikolai.jpg" alt="Николай Тарасов" width="270" height="260">
-                        <h3>Николай Тарасов</h3>
-                        <p>Marketing</p>
+                        <h3 class="team-name">Николай Тарасов</h3>
+                        <p class="team-text">Marketing</p>
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="" class="team-link">
                         <img src="./imgs/mikhail.jpg" alt="Михаил Ермаков" width="270" height="260">
-                        <h3>Михаил Ермаков</h3>
-                        <p>UI Designer</p>
+                        <h3 class="team-name">Михаил Ермаков</h3>
+                        <p class="team-text">UI Designer</p>
                     </a>
                 </li>
             </ul>
         </section>
 
     </main>
-    <footer>
-        <h1>WebStudio</h1>
-        <ul>
-            <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <footer class="foot">
+        <h1 class="logo"><span class="title">Web</span>Studio</h1>
+        <ul class="foot-list list">
+            <li><address class="foot-address">г. Киев, пр-т Леси Украинки, 26</address></li>
+            <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
         </ul>
     </footer>
 </body>
