--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1 class="logo"><span class="title">Web</span>Studio</h1>
         <nav>
             <ul class="site-nav list">
-                <li><a href="" class="link">Студия</a></li>
-                <li><a href="" class="link">Портфолио</a></li>
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
@@ -27,7 +27,7 @@
     <!-- Hero -->
     <main>
         <section class="hero">
-            <h2 class="hero-title">Эффективные решения </br> для вашего бизнеса</h2>
+            <h2 class="hero-title">Эффективные решения <br> для вашего бизнеса</h2>
             <button type="button" class="button">Заказать услугу</button>
         </section>
     <!-- Specialty -->
