--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <section class="work">
             <h2 class="work-title">Чем мы занимаемся</h2>
             <ul class="work-list list">
-                <li><img src="./imgs/code.jpg" alt="Writing Code" width="370" height="294"></li>
-                <li><img src="./imgs/phone.jpg" alt="Taking Photo" width="370" height="294"></li>
-                <li><img src="./imgs/tablet.jpg" alt="Tablet Design" width="370" height="294"></li>
+                <li><img src="./imgs/code.jpg" alt="Написание Кода" width="370" height="294"></li>
+                <li><img src="./imgs/phone.jpg" alt="Фотография на телефон" width="370" height="294"></li>
+                <li><img src="./imgs/tablet.jpg" alt="Дизайн на планшетеы" width="370" height="294"></li>
             </ul>
         </section>
         <!-- team -->
