--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,16 @@
         <section class="portfolio">
             <ul class="portfolio-list list">
                 <li>
-                    <img src="./imgs/techno.jpg" alt="Computer" width="370" height="294">
+                    <img src="./imgs/techno.jpg" 
+                    alt="Технокряк" 
+                    width="370" 
+                    height="294">
                     <h3 class="portfolio-title">Технокряк</h3>
                     <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./imgs/ball.jpg" 
-                    alt="Poster" 
+                    alt="Постер Баскетбольной Игры" 
                     width="370" 
                     height="294">
                     <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
@@ -52,14 +55,14 @@
                 </li>
                 <li>
                     <img src="./imgs/seafood.jpg" 
-                    alt="Restaraunt" 
+                    alt="Логотип ресторана сифуд" 
                     width="370" 
                     height="294">
                     <h3 class="portfolio-title">Ресторан Seafood</h3>
                     <p class="portfolio-text">Приложение</p>
                 </li>
                 <li><img src="./imgs/headphones.jpg" 
-                    alt="headphones" 
+                    alt="Наушники" 
                     width="370" 
                     height="294">
                     <h3 class="portfolio-title">Проект Prime</h3>
@@ -67,7 +70,7 @@
                 </li>
                 <li>
                     <img src="./imgs/boxes.jpg" 
-                    alt="Boxes" 
+                    alt="Коробки" 
                     width="370" 
                     height="294">
                     <h3 class="portfolio-title">Проект Boxes</h3>
@@ -75,7 +78,7 @@
                 </li>
                 <li>
                     <img src="./imgs/insp.jpg" 
-                    alt="Computer" 
+                    alt="Компьютер" 
                     width="370" 
                     height="294">
                     <h3 class="portfolio-title">Inspiration has no Borders</h3>
@@ -83,7 +86,7 @@
                 </li>
                 <li>
                     <img src="./imgs/limited-edition.jpg" 
-                    alt="LI" 
+                    alt="Журнал" 
                     width="370" 
                     height="294">
                     <h3 class="portfolio-title">Издание Limited Edition</h3>
@@ -91,7 +94,7 @@
                 </li>
                 <li>
                     <img src="./imgs/lab-tag.jpg" 
-                    alt="LAB" 
+                    alt="Лейбл" 
                     width="370" 
                     height="294">
                     <h3 class="portfolio-title">Проект LAB</h3>
@@ -99,7 +102,7 @@
                 </li>
                 <li>
                     <img src="./imgs/business.jpg" 
-                    alt="" 
+                    alt="Лэптоп" 
                     width="370" 
                     height="294">
                     <h3 class="portfolio-title">Growing Business</h3>
