--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <header>
-        <h1 class="logo"><span class="title">Web</span>Studio</h1>
+        <a href="index.html" class="logo"><span class="title">Web</span>Studio</a>
         <nav>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+                <li><a href="./index.html" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link current">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contact list">
@@ -27,26 +27,26 @@
     <!-- Hero -->
     <main>
         <section class="hero">
-            <h2 class="hero-title">Эффективные решения <br> для вашего бизнеса</h2>
+            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
             <button type="button" class="button">Заказать услугу</button>
         </section>
     <!-- Specialty -->
         <section class="spec">
             <ul class="spec-list list">
                 <li>
-                    <h3 class="spec-list-title">Внимание к деталям</h3>
+                    <h2 class="spec-list-title">Внимание к деталям</h2>
                     <p class="spec-list-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="spec-list-title">Пунктуальность</h3>
+                    <h2 class="spec-list-title">Пунктуальность</h2>
                     <p class="spec-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="spec-list-title">Планирование</h3>
+                    <h2 class="spec-list-title">Планирование</h2>
                     <p class="spec-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3 class="spec-list-title">Современные технологии</h3>
+                    <h2 class="spec-list-title">Современные технологии</h2>
                     <p class="spec-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -97,11 +97,11 @@
 
     </main>
     <footer class="foot">
-        <h1 class="logo"><span class="title">Web</span>Studio</h1>
+        <a href="./index.html" class="foot-logo"><span class="title">Web</span>Studio</a>
         <ul class="foot-list list">
             <li><address class="foot-address">г. Киев, пр-т Леси Украинки, 26</address></li>
-            <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="foot-contact-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="foot-contact-link">+38 096 111 11 11</a></li>
         </ul>
     </footer>
 </body>
