--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <header>
-        <h1 class="logo"><span class="title">Web</span>Studio</h1>
+        <a href="index.html" class="logo"><span class="title">Web</span>Studio</a>
         <nav>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+                <li><a href="./index.html" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link current">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contact list">
@@ -25,7 +25,7 @@
         </ul>
     </header>
     <main>
-        <section class="select">
+        <section class="portfolio"></section>
             <ul class="select-list">
                 <li><button type="button" class="select-button">Все</button></li>
                 <li><button type="button" class="select-button">Веб-сайты</button></li>
@@ -33,9 +33,7 @@
                 <li><button type="button" class="select-button">Дизайн</button></li>
                 <li><button type="button" class="select-button">Маркетинг</button></li>
             </ul>
-        </section>
 
-        <section class="portfolio">
             <ul class="portfolio-list list">
                 <li>
                     <img src="./imgs/techno.jpg" 
@@ -115,13 +113,13 @@
     </main>
 
     <footer class="foot">
-        <h1 class="foot-logo"><span class="title">Web</span>Studio</h1>
+        <a href="index.html" class="foot-logo"><span class="title">Web</span>Studio</a>
         <ul class="foot-list list">
             <li>
                 <address class="foot-address">г. Киев, пр-т Леси Украинки, 26</address>
             </li>
-            <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="foot-contact-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="foot-contact-link">+38 096 111 11 11</a></li>
         </ul>
     </footer>
     
