changed class for site nav in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
         <a href="index.html" class="logo"><span class="title">Web</span>Studio</a>
         <nav>
             <ul class="site-nav list">
-                <li><a href="./index.html" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li><a href="" class="link current">Контакты</a></li>
+                <li><a href="./index.html" class="site-nav-link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="lsite-nav-link current">Портфолио</a></li>
+                <li><a href="" class="site-nav-link current">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contact list">
