--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul class="site-nav list">
                 <li><a href="./index.html" class="site-nav-link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="site-nav-link current">Портфолио</a></li>
-                <li><a href="" class="site-nav-link current">Контакты</a></li>
+                <li><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
+                <li><a href="" class="site-nav-link">Контакты</a></li>
             </ul>
         </nav>
         <ul class="contact list">
